--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ body {
 	transition: 0.25s box-shadow;
 }
 .btn:hover {
-	transform: scale(1.1);
+	/*transform: scale(1.1);*/
 	box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 .btn-1 {
@@ -306,6 +306,9 @@ body {
 	}
 
 /*--------------------------------------*/
+.input-article textarea, .input-aside textarea {
+		min-height: 400px;
+	}
 
   .btn {
   	width: 300px;
