--- a/style.css
+++ b/style.css
@@ -270,22 +270,26 @@ body {
 
 /* CELPHONE */
 @media only screen and (max-width: 480px) {
-  .container-wrapper {
-    grid-template-columns: 1fr;
-    grid-template-rows: 6em 1fr 1fr;
-    grid-template-areas:
-    "nav"
-		"article"
-		"aside"
-  }
-  .grid-article {
-		display: grid;
-		grid-template-columns: 1fr;
-		grid-template-rows: 1fr 70px 70px;
-	}
-	.input-article {
-	grid-row: 1 / 2;
- }
+	  .container-wrapper {
+	    grid-template-columns: 1fr;
+	    grid-template-rows: 6em 1fr 1fr;
+	    grid-template-areas:
+	    "nav"
+			"article"
+			"aside";
+
+			min-height: 100vh;
+
+
+	  }
+	  .grid-article {
+			display: grid;
+			grid-template-columns: 1fr;
+			grid-template-rows: 1fr 70px 70px;
+		}
+		.input-article {
+		grid-row: 1 / 2;
+	 }
 
  /*--------------------------------------*/
 		.aside-imagem-container {
@@ -306,14 +310,18 @@ body {
 	}
 
 /*--------------------------------------*/
-.input-article textarea, .input-aside textarea {
-		min-height: 400px;
-	}
+		.input-article textarea, .input-aside textarea {
+				min-height: 400px;
+			}
 
-  .btn {
-  	width: 300px;
-  	/*margin: 0.5em;*/
-  }
+	  .btn {
+	  	width: 300px;
+	  	/*margin: 0.5em;*/
+	  }
+
+	  .btn-2 {
+	  	margin-bottom: 20px;
+	  } 
 }
 
 
